2009-11-05  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWindow.m (-dealloc): Release the toolbar without
	updating the window's geometry and thus avoid calling the delegate
	during deallocation.

	* Source/NSAlert.m (NSBeginAlertSheet, NSBeginCriticalAlertSheet,
	NSBeginInformationalAlertSheet): Call the didEndSelector after the
	sheet has been closed.

2009-11-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m (GSRGBColor -getComponents:): Correct
	alpha_component passing.

2009-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m (-colorUsingColorSpace): Support more color spaces.
	* Source/NSColorSpace.m (COLORSPACE): Initialize the static variable. 
	
2009-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSThemeDrawing.m: Add more includes to apeace Riccardo's compiler.

2009-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/Functions.m (NSConvertGlobalToWindowNumber,
	NSConvertWindowNumberToGlobal): Add dummy implementation. 

2009-11-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-nextEventMatchingMask:...): Only set
	the current event when dequeuing and never return the null_event.
	
2009-11-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSTheme.m: Remove some compiler warnings.
	* Source/NSMenuItemCell.m,
	* Source/GSToolbarView.m,
	* Source/GSThemeDrawing.m,
	* Headers/Additions/GNUstepGUI/GSTheme.h: New theme methods for
	toolbar and menu item drawing.
	
2009-11-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m: Switch to the new shared composite and
	dissolve code.

2009-10-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSProgressIndicator.m: Correct flipped drawing.

2009-10-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSProgressIndicator.m: Fill more methods.

2009-10-27 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSProgressIndicator.h,
	* Source/NSProgressIndicator.m: Add missing OSX 10.5 methods and
	use the pattern colour patch by Uli Kusterer
	<witness.of.teachtext@gmx.net>.